--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.20",
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-community/slider": "4.5.6",
+    "expo": "^54.0.0",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5",
     "react-dom": "19.0.0",
-    "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4",
-    "@react-native-community/slider": "4.5.6"
+    "react-native": "0.79.5",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
