--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@react-native-community/slider": "4.5.6",
     "@react-native-firebase/app": "^23.5.0",
     "@react-native-firebase/messaging": "^23.5.0",
+    "@react-navigation/native": "^7.1.20",
+    "@react-navigation/stack": "^7.6.4",
+    "axios": "^1.13.2",
     "expo": "^54.0.0",
+    "expo-dev-client": "~6.0.17",
     "expo-device": "~8.0.9",
     "expo-notifications": "^0.32.12",
     "expo-status-bar": "~2.2.3",
@@ -25,8 +29,9 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-push-notification": "^8.1.1",
-    "react-native-web": "^0.20.0",
-    "expo-dev-client": "~6.0.17"
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
