--- a/package.json
+++ b/package.json
@@ -5,38 +5,32 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~5.0.4",
-    "@notifee/react-native": "^9.1.8",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
-    "@react-native-community/slider": "4.5.6",
-    "@react-native-firebase/app": "^23.5.0",
-    "@react-native-firebase/messaging": "^23.5.0",
-    "@react-navigation/native": "^7.1.20",
-    "@react-navigation/stack": "^7.6.4",
-    "axios": "^1.13.2",
-    "expo": "^54.0.0",
-    "expo-dev-client": "~6.0.17",
+    "@react-native-community/slider": "5.0.1",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/stack": "^7.2.1",
+    "axios": "^1.7.9",
+    "expo": "~54.0.0",
     "expo-device": "~8.0.9",
-    "expo-notifications": "^0.32.12",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-push-notification": "^8.1.1",
+    "expo-notifications": "~0.32.13",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.20.0"
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@babel/core": "^7.25.0",
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
