Implementacao com Wifi e integracao com o prototipo funcionado plenamente

--- a/app.json
+++ b/app.json
@@ -20,7 +20,13 @@
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.davy.medtime"
+      "package": "com.davy.medtime",
+      "permissions": [
+        "INTERNET",
+        "ACCESS_NETWORK_STATE",
+        "ACCESS_WIFI_STATE",
+        "CHANGE_WIFI_MULTICAST_STATE"
+      ]
     },
     "web": {
       "favicon": "./assets/icon.png"
