--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.9",
     "expo": "~54.0.0",
     "expo-device": "~8.0.9",
+    "expo-network": "~8.0.7",
     "expo-notifications": "~0.32.13",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
